--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <li><a href="https://github.com/akankshathapliyal">Akanksha Thapliyal</a></li>
              <li><a href="https://github.com/aishapervin">Aisha Pervin</a></li>
              <li><a href="https://github.com/manishchauhan07">Manish Chauhant</a></li>
+             <li><a href="https://github.com/aishapervin">Aisha Pervin</a></li>
             <li><a href="https://github.com/anishkabhatia">Anishka Bhatia</a></li>            
 
             <li><a href="https://github.com/vishalhacker">vishal hacker</a></li>
@@ -100,6 +101,8 @@
             <li><a href="https://github.com/Shikhar253">Shikhar Saxena</a></li>
 
             <li><a href="https://github.com/Hackerrcracker">Rahul Sharma</a></li>
+            
+               <li><a href="https://github.com/Sks2000Sks">Sumith Kumar</a></li>
              <li><a href="https://github.com/Harsh-COE">HARSH JOSHI</a></li>
 
 
